# flipbuq

./: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac
src/: Makefile  Makefile.am  Makefile.in  flipbuq.py  flipbuq.ui
